<resources>
    <string name="app_name">Work TPP-7</string>
    <string name="logging_label">Logging</string>
    <string name="title_label">Short Description</string>
    <string name="defect_fixed_label">Defect Fixed</string>
    <string name="details_label">Details</string>
    <string name="new_defect">New Defect</string>
    <string name="equipment_work">Equipment at work</string>
    <string name="defects">Defects</string>
    <string name="boiler_unit">Boiler Unit</string>
    <string name="turbogenerator">Turbogenerator</string>
    <string name="other_equipment">Other Equipment</string>
    <string name="collected_all">Collected All</string>
    <string name="dismantled_all">Dismantled All</string>
    <string name="working_shift">Working Shift</string>
    <string name="laser">Laser</string>
    <string name="hydrogen">Hydrogen</string>
    <string name="nitrogen">Nitrogen</string>
    <string name="compressor">Compressor</string>
    <string name="vk1">VK-1</string>
    <string name="vk2">VK-2</string>
    <string name="vk4">VK-4</string>
    <string name="vk5">VK-5</string>
    <string name="vk6">VK-6</string>
    <string name="save">Save</string>
    <string name="control_measurement">Control Measurement</string>
    <string name="result">Result</string>
    <string name="pn">Pн</string>
    <string name="pk">Pк</string>
    <string name="ata">ата</string>
    <string name="tn">tн</string>
    <string name="tk">tк</string>
    <string name="degree">°C</string>
    <string name="V">V%</string>
    <string name="humidity">Humidity</string>
    <string name="humidity_tg_say">ТГ не более 12 г/м³ \nСЭУ не более 5 г/м³</string>
    <string name="dew_point">Dew point</string>
    <string name="dew_point_param">не более 15 °C</string>
    <string name="hydrogen_nitrogen">Hydrogen - Nitrogen</string>
    <string name="hydrogen_nitrogen_param">H2 не более 3% ⇵</string>
    <string name="nitrogen_air">Nitrogen - Air</string>
    <string name="nitrogen_air_param">О2 не менее 20% ↓</string>
    <string name="air_nitrogen">Air - Nitrogen</string>
    <string name="air_nitrogen_param">О2 не более 3% ⇵</string>
    <string name="nitrogen_hydrogen">Nitrogen - Hydrogen</string>
    <string name="nitrogen_hydrogen_param">H2 не менее 97% ↓</string>
    <string name="inspection_schedule">Inspection Schedule</string>
    <string name="day_shift" >с 8.00 до 20.00</string>
    <string name="night_shift" >с 20.00 до 8.00</string>
    <string name="pathogen">Pathogen:</string>
    <string name="rotor">Rotor:</string>
    <string name="stator">Stator:</string>
    <string name="MOm" translatable="false">%1$s МОм</string>
    <string name="generator_insulation">Generator Insulation</string>
    <string name="titleReceiverH1" translatable="false">H2 №1</string>
    <string name="titleReceiverH2" translatable="false">H2 №2</string>
    <string name="titleReceiverH3" translatable="false">H2 №3</string>
    <string name="titleReceiverH4" translatable="false">H2 №4</string>
    <string name="titleReceiverH5" translatable="false">H2 №5</string>
    <string name="titleReceiverH6" translatable="false">H2 №6</string>
    <string name="titleReceiverN1" translatable="false">N2 №1</string>
    <string name="titleReceiverN2" translatable="false">N2 №2</string>
    <string name="titleReceiverN3" translatable="false">N2 №3</string>
    <string name="electrolysis">Electrolysis</string>
    <string name="receiver_volume" translatable="false">%1$s м3 / %2$s м3 / %3$s м3</string>
    <string name="configuration">Configuration</string>
    <string name="receiver_parameters">Receiver Volume / Volume In The Receiver / Stock</string>
    <string name="volume_generator">
         Volume of TG-1.4: 50 m3\n
        Volume of TG-3,5,6: 2*34 m3\n
        Stock H2: %1$s m3
    </string>
    <string name="shop_selection">Shop Selection</string>
    
    <string-array name="spinner_generator">
        <item>ТГ-1</item>
        <item>ТГ-3</item>
        <item>ТГ-4</item>
        <item>ТГ-5</item>
        <item>ТГ-6</item>
    </string-array>

</resources>