<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="#F6F4EC">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="211dp"
        android:layout_height="214dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
        android:backgroundTint="#EDE5D2"
        android:backgroundTintMode="multiply"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pk_ata"
        app:layout_constraintTop_toTopOf="parent">

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="205dp"
        android:layout_height="311dp"
        android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
        android:backgroundTint="#EDE5D2"
        android:backgroundTintMode="multiply"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/textView14"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="@+id/textView7">

    </LinearLayout>

    <EditText
        android:id="@+id/edit_pn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="36dp"
        android:ems="2"
        android:hint="@string/pn"
        android:inputType="numberDecimal"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/text_pn"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_pk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:ems="2"
        android:hint="@string/pk"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="@+id/edit_pn"
        app:layout_constraintTop_toBottomOf="@+id/edit_pn" />

    <EditText
        android:id="@+id/edit_tn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:ems="2"
        android:hint="@string/tn"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="@+id/edit_pk"
        app:layout_constraintTop_toBottomOf="@+id/edit_pk" />

    <EditText
        android:id="@+id/edit_tk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:ems="2"
        android:hint="@string/tk"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="@+id/edit_tn"
        app:layout_constraintTop_toBottomOf="@+id/edit_tn" />

    <TextView
        android:id="@+id/text_pn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="44dp"
        android:padding="2dp"
        android:text="@string/pn"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pn_ata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:padding="2dp"
        android:text="@string/ata"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/edit_pn"
        app:layout_constraintTop_toTopOf="@+id/text_pn" />

    <TextView
        android:id="@+id/text_pk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="29dp"
        android:padding="2dp"
        android:text="@string/pk"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_pn" />

    <TextView
        android:id="@+id/text_tn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="29dp"
        android:padding="2dp"
        android:text="@string/tn"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_pk" />

    <TextView
        android:id="@+id/text_tk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="29dp"
        android:padding="2dp"
        android:text="@string/tk"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_tn" />

    <TextView
        android:id="@+id/pk_ata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:padding="2dp"
        android:text="@string/ata"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/edit_pk"
        app:layout_constraintTop_toTopOf="@+id/text_pk" />

    <TextView
        android:id="@+id/tn_degree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:padding="2dp"
        android:text="@string/degree"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/edit_tn"
        app:layout_constraintTop_toTopOf="@+id/text_tn" />

    <TextView
        android:id="@+id/tk_degree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:padding="2dp"
        android:text="@string/degree"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/edit_tk"
        app:layout_constraintTop_toTopOf="@+id/text_tk" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
        android:backgroundTint="#CAB985"
        android:backgroundTintMode="multiply"
        android:text="@string/V"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/tk_degree"
        app:layout_constraintStart_toStartOf="@+id/text_tk"
        app:layout_constraintTop_toBottomOf="@+id/edit_tk" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:text="@string/humidity_tg_say"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pn_ata"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hydrogen"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/edit_pn" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:text="@string/dew_point"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/dew_point_param"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/hydrogen_nitrogen"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/hydrogen_nitrogen_param"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/nitrogen_air"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/nitrogen_air_param"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/air_nitrogen"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/air_nitrogen_param"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textView11"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/nitrogen_hydrogen"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView11"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/nitrogen_hydrogen_param"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textView13"
        app:layout_constraintStart_toStartOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />




</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>