<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Spinner
        android:id="@+id/spinner_tg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:entries="@array/vvv"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_stator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="5"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edit_rotor"
        app:layout_constraintTop_toBottomOf="@+id/spinner_tg" />

    <EditText
        android:id="@+id/edit_rotor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="5"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toStartOf="@+id/edit_stator"
        app:layout_constraintStart_toEndOf="@+id/edit_pathogen"
        app:layout_constraintTop_toBottomOf="@+id/spinner_tg" />

    <EditText
        android:id="@+id/edit_pathogen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="5"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toStartOf="@+id/edit_rotor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_tg" />

    <TextView
        android:id="@+id/text_pathogen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/pathogen"
        app:layout_constraintBottom_toTopOf="@+id/edit_pathogen"
        app:layout_constraintStart_toStartOf="@+id/edit_pathogen" />

    <TextView
        android:id="@+id/text_rotor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/rotor"
        app:layout_constraintBottom_toTopOf="@+id/edit_rotor"
        app:layout_constraintStart_toStartOf="@+id/edit_rotor" />

    <TextView
        android:id="@+id/text_stator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/stator"
        app:layout_constraintBottom_toTopOf="@+id/edit_stator"
        app:layout_constraintStart_toStartOf="@+id/edit_stator" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_stator" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_generator_insulation"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_stator" />


</androidx.constraintlayout.widget.ConstraintLayout>