<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8E7DB">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
        android:backgroundTint="#EDEBE1"
        android:backgroundTintMode="multiply"
        app:layout_constraintBottom_toTopOf="@+id/list_compressor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner_compressors_1"
        android:layout_width="77dp"
        android:layout_height="37dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/common_google_signin_btn_text_light_normal_background"
        android:backgroundTint="#D8D6CF"
        android:backgroundTintMode="multiply"
        android:padding="1dp"
        app:layout_constraintEnd_toEndOf="@+id/vk_5"
        app:layout_constraintTop_toBottomOf="@+id/vk_5" />

    <Spinner
        android:id="@+id/spinner_compressors_2"
        android:layout_width="77dp"
        android:layout_height="37dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/common_google_signin_btn_text_light_normal_background"
        android:backgroundTint="#D8D6CF"
        android:backgroundTintMode="multiply"
        android:padding="1dp"
        app:layout_constraintEnd_toEndOf="@+id/spinner_compressors_1"
        app:layout_constraintTop_toBottomOf="@+id/spinner_compressors_1" />

    <EditText
        android:id="@+id/vk_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:ems="5"
        android:hint="@string/vk6"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/vk_4"
        app:layout_constraintStart_toStartOf="@+id/vk_4"
        app:layout_constraintTop_toBottomOf="@+id/vk_4" />

    <EditText
        android:id="@+id/vk_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="20dp"
        android:ems="5"
        android:hint="@string/vk5"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_vk5"
        app:layout_constraintTop_toBottomOf="@+id/vk_2" />

    <EditText
        android:id="@+id/vk_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="20dp"
        android:ems="5"
        android:hint="@string/vk4"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toStartOf="@+id/text_vk5"
        app:layout_constraintStart_toEndOf="@+id/text_vk4"
        app:layout_constraintTop_toBottomOf="@+id/vk_1" />

    <EditText
        android:id="@+id/vk_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="30dp"
        android:ems="5"
        android:hint="@string/vk2"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_vk2"
        app:layout_constraintTop_toBottomOf="@+id/text_title" />

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/compressor"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/vk_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="30dp"
        android:ems="5"
        android:hint="@string/vk1"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toStartOf="@+id/text_vk2"
        app:layout_constraintStart_toEndOf="@+id/text_vk1"
        app:layout_constraintTop_toBottomOf="@+id/text_title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_compressor"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:background="#B3B19F"
        android:backgroundTintMode="screen"
        android:paddingTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_save" />

    <TextView
        android:id="@+id/text_vk1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="2dp"
        android:text="@string/vk1"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/vk_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title" />

    <TextView
        android:id="@+id/text_vk2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:text="@string/vk2"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/text_vk1"
        app:layout_constraintEnd_toStartOf="@+id/vk_2"
        app:layout_constraintStart_toEndOf="@+id/vk_1"
        app:layout_constraintTop_toTopOf="@+id/text_vk1" />

    <TextView
        android:id="@+id/text_vk4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="2dp"
        android:text="@string/vk4"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/vk_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_vk1" />

    <TextView
        android:id="@+id/text_vk5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="2dp"
        android:text="@string/vk5"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/vk_5"
        app:layout_constraintStart_toEndOf="@+id/vk_4"
        app:layout_constraintTop_toBottomOf="@+id/text_vk2" />

    <TextView
        android:id="@+id/text_vk6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/vk6"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/text_vk4"
        app:layout_constraintStart_toStartOf="@+id/text_vk4"
        app:layout_constraintTop_toBottomOf="@+id/text_vk4" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/save"
        app:layout_constraintStart_toStartOf="@+id/text_vk6"
        app:layout_constraintTop_toTopOf="@+id/spinner_compressors_2" />


</androidx.constraintlayout.widget.ConstraintLayout>